# ESDT-Staking-v2

./: Cargo.toml  README.md  StakingSC.json  erdpy.json
meta/: Cargo.toml
src/: staking.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
