[package]
name = "staking-wasm"
version = "0.0.0"
edition = "2021"
publish = true
authors = [ "René Ďuriš"]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.staking]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.38.0"

[dependencies.elrond-wasm-output]
version = "0.38.0"
features = [ "wasm-output-mode",]
